unpackaged/main/default/objects/Recharge__c/Recharge__c.object-meta.xml
<CustomObject>
    <label>Recharge</label>
    <nameField>
        <label>Recharge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recharges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>