unpackaged/main/default/objects/Recharge__c/fields/Plans__c.field-meta.xml
<CustomField>
    <fullName>Plans__c</fullName>
    <label>Plans</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airtel</fullName>
            </value>
            <value>
                <fullName>jio</fullName>
            </value>
            <value>
                <fullName>Idea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>