unpackaged/main/default/objects/Recharge__c/fields/postpaid_amount__c.field-meta.xml
<CustomField>
    <fullName>postpaid_amount__c</fullName>
    <label>postpaid amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>