unpackaged/main/default/objects/Recharge__c/fields/prepaid_amount__c.field-meta.xml
<CustomField>
    <fullName>prepaid_amount__c</fullName>
    <label>prepaid amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>