unpackaged/main/default/objects/Recharge__c/recordTypes/postpaid.recordType-meta.xml
<RecordType>
    <fullName>postpaid</fullName>
    <active>true</active>
    <label>postpaid</label>
</RecordType>