unpackaged/main/default/objects/Recharge__c/recordTypes/prepaid.recordType-meta.xml
<RecordType>
    <fullName>prepaid</fullName>
    <active>true</active>
    <label>prepaid</label>
</RecordType>